--- a/index.html
+++ b/index.html
@@ -106,10 +106,217 @@
 
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
+    </div>
+</section>
+
+<!-- Team -->
+
+<section class="bg-light pt-5 pb-5" id="team">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">Nuestro equipo</h2>
+                <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+                    <h4>Andres Castelblanco</h4>
+                    <p class="text-muted">Security and Full Stack Dev</p>
+                    <button class="button type1">
+                        Effect one
+                    </button>
+
+
+                    <div class="w-100">
+
+                        <!--<div class="subheading mb-3">Programming Languages &amp; Tools</div>-->
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item">
+                                <i class="fab fa-java"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-css3-alt"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-js-square"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-angular"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-react"></i>
+                            </li>
+
+                            <li class="list-inline-item">
+                                <i class="fab fa-sass"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-less"></i>
+                            </li>
+
+                            <li class="list-inline-item">
+                                <i class="fab fa-npm"></i>
+                            </li>
+                        </ul>
+
+                        <div class="subheading mb-3">Workflow</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Mobile-First, Responsive Design
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Cross Browser Testing &amp; Debugging
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Cross Functional Teams
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Agile Development &amp; Scrum
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+                    <h4>H. Gerard Palet</h4>
+                    <p class="text-muted">Back End and Full Stack Dev</p>
+                    <p class="text-muted"><i class="fab fa-whatsapp"></i> 15-3643-3247</p>
+                    <div class="w-100">
+
+                        <!--<div class="subheading mb-3">Programming Languages &amp; Tools</div>-->
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item">
+                                <i class="fab fa-java"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-html5"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-css3-alt"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-js-square"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-angular"></i>
+                            </li>
+
+                            <li class="list-inline-item">
+                                <i class="fab fa-node-js"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-python"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-npm"></i>
+                            </li>
+                        </ul>
+
+                        <div class="subheading mb-3">Workflow</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Mobile-First, Responsive Design
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Cross Browser Testing &amp; Debugging
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Cross Functional Teams
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Agile Development &amp; Scrum
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+                    <h4>Maximiliano Marchi</h4>
+                    <p class="text-muted">Desing and Full Stack Web</p>
+                    <div class="w-100">
+
+                        <!--<div class="subheading mb-3">Programming Languages &amp; Tools</div>-->
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item">
+                                <i class="fab fa-java"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-css3-alt"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-js-square"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-angular"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-react"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-node-js"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-sass"></i>
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fab fa-less"></i>
+                            </li>
+
+                            <li class="list-inline-item">
+                                <i class="fab fa-npm"></i>
+                            </li>
+                        </ul>
+
+                        <div class="subheading mb-3">Workflow</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Mobile-First, Responsive Design
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Cross Browser Testing &amp; Debugging
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Cross Functional Teams
+                            </li>
+                            <li>
+                                <i class="fa-li fa fa-check"></i>
+                                Agile Development &amp; Scrum
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--<div class="row">-->
+        <!--<div class="col-lg-8 mx-auto text-center">-->
+        <!--<p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque,-->
+        <!--laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>-->
+        <!--</div>-->
+        <!--</div>-->
+    </div>
+</section>
+
+<section id="services2">
+    <div class="container">
+
         <div class="row text-center">
             <div class="col-md-4">
                 <img src="img/logos/4.png" class="img-fluid" alt="Responsive image">
@@ -135,6 +342,7 @@
         </div>
     </div>
 </section>
+
 
 <!-- Portfolio Grid -->
 <section class="bg-light" id="portfolio">
@@ -323,97 +531,6 @@
     </div>
 </section>
 
-<!-- Team -->
-<section class="bg-light" id="team">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-                    <h4>Kay Garland</h4>
-                    <p class="text-muted">Lead Designer</p>
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                    <h4>Larry Parker</h4>
-                    <p class="text-muted">Lead Marketer</p>
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-                    <h4>Diana Pertersen</h4>
-                    <p class="text-muted">Lead Developer</p>
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque,
-                    laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!-- Clients -->
 <section class="py-5">
@@ -445,12 +562,14 @@
 
 <!-- Contact -->
 <div class="container-fluid brb-1">
+
     <div class="row imagen-footer">
         <div class="container-fluid pb-5">
             <div class="intro-text text-center">
                 <div class="intro-lead-in">
                     <h2>sobre nosotros</h2>
-                    <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur enim harum iusto labore maxime minima modi nam porro possimus, provident quam qui quod suscipit velit, veniam voluptas voluptatem voluptates?</span><span>Accusamus alias aspernatur corporis ex fugit molestiae, necessitatibus nostrum odit officiis omnis optio possimus, quod ratione. Ad, asperiores atque aut beatae, consequuntur deleniti dicta eius exercitationem id nulla sapiente unde.</span></p>
+                    <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur enim harum iusto labore maxime minima modi nam porro possimus, provident quam qui quod suscipit velit, veniam voluptas voluptatem voluptates?</span><span>Accusamus alias aspernatur corporis ex fugit molestiae, necessitatibus nostrum odit officiis omnis optio possimus, quod ratione. Ad, asperiores atque aut beatae, consequuntur deleniti dicta eius exercitationem id nulla sapiente unde.</span>
+                    </p>
                 </div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
                    href="#services">Contactanos</a>
@@ -513,7 +632,6 @@
 
 <!-- Footer -->
 <footer>
-
     <div class="row">
         <div class="col-md-4">
             <span class="copyright">Copyright &copy; Angema 2019</span>
@@ -538,7 +656,7 @@
             </ul>
         </div>
         <div class="col-md-4">
-            <ul class="list-inline quicklinks" >
+            <ul class="list-inline quicklinks">
                 <li class="list-inline-item">
                     <a href="#">Privacy Policy</a>
                 </li>
