--- a/index.html
+++ b/index.html
@@ -41,19 +41,22 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#services">Home</a>
+                    <a class="nav-link js-scroll-trigger" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#portfolio">Automatizacion</a>
+                    <a class="nav-link js-scroll-trigger" href="#services">SERVICES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">Desarrollo Movil</a>
+                    <a class="nav-link js-scroll-trigger" href="#team">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#team">Desarrollo Web</a>
+                    <a class="nav-link js-scroll-trigger" href="#portfolio">portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Diseño Integral</a>
+                    <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -61,12 +64,18 @@
 </nav>
 
 <!-- Header -->
-<header class="masthead">
+<header class="masthead" id="home">
     <div class="container-fluid p-5">
         <div class="intro-text">
-            <div class="intro-lead-in"><p>Soluciones integrales, desarrollo</p> diseño y mantenimiento!</div>
+            <div class="intro-lead-in"><p>Soluciones integrales, desarrollo,</p> diseño, mantenimiento!</div>
             <div class="intro-heading text-uppercase">know our work</div>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Contactanos</a>
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger " href="#contact">
+                Contactanos <br>
+                <span class="text-1">
+                    <i class="fab fa-whatsapp "></i>  15-3643-3247
+                </span>
+
+            </a>
         </div>
     </div>
 </header>
@@ -77,32 +86,34 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Services</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
             </div>
         </div>
         <div class="row text-center">
             <div class="col-md-4">
                 <img src="img/logos/1.png" class="img-fluid" alt="Responsive image">
                 <h4 class="service-heading">aplicaciones mobiles</h4>
-                <p class="text-muted">Desarrollo movil de alta eficiencia, multiplataforma (Android, Ios) y
-                    responsive.</p>
-                <a class="btn btn-primary text-uppercase js-scroll-trigger" href="#">Conocer mas..</a>
+                <p class="text-muted">Desarrollamos aplicaciones mobiles responsivas de alta eficiencia e intuitivas.
+                Nativas de gran rendimiento, multiplataformas. </p>
+                <!--<a class="btn btn-primary text-uppercase js-scroll-trigger" href="#">Conocer mas..</a>-->
             </div>
             <div class="col-md-4">
                 <img src="img/logos/2.png" class="img-fluid" alt="Responsive image">
-                <h4 class="service-heading">diseño web</h4>
-                <p class="text-muted">Contamos con un sistema integral para el desarrollo de sistemas intuitivos,
-                    atractivos e interactivos.</p>
-                <a class="btn btn-primary text-uppercase js-scroll-trigger" href="#">Conocer mas..</a>
+                <h4 class="service-heading">Aplicaciones web</h4>
+                <p class="text-muted">Ingenieria aplicada a la Web. Servicios webs aptos para altas demandas,
+                    servicios Rest-Full, asincronos, aplicaciones SOAP, enrutado de transacciones de gran volumen,
+                    con seguridad de punta a punta.</p>
+                <!--<a class="btn btn-primary text-uppercase js-scroll-trigger" href="#">Conocer mas..</a>-->
 
             </div>
             <div class="col-md-4">
                 <img src="img/logos/3.png" class="img-fluid" alt="Responsive image">
 
                 <h4 class="service-heading">Deseño grafico</h4>
-                <p class="text-muted">Personas altamente capacitadas en todas las ramas del diseño. Packagin, marca,
-                    identidad, editorial, web.</p>
-                <a class="btn btn-primary text-uppercase js-scroll-trigger" href="#">Conocer mas..</a>
+                <p class="text-muted">Diseños orientados a la experienca del usuario, el proceso de mejorar la
+                    satisfacción y la lealtad del cliente al mejorar la facilidad de uso y el placer que brinda la
+                    interacción entre el cliente y el producto.</p>
+                <!--<a class="btn btn-primary text-uppercase js-scroll-trigger" href="#">Conocer mas..</a>-->
 
             </div>
         </div>
@@ -115,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Nuestro equipo</h2>
+                <h2 class="section-heading text-uppercase">team leaders</h2>
                 <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
             </div>
         </div>
@@ -311,6 +322,15 @@
         <!--laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>-->
         <!--</div>-->
         <!--</div>-->
+    </div>
+</section>
+
+<section>
+    <div class="efect">
+        <div class="container">
+            <h1>-Do Work That Matters-</h1>
+            <h3>You'll never regret it.</h3>
+        </div><!-- /.container -->
     </div>
 </section>
 
@@ -534,33 +554,22 @@
 
 <!-- Clients -->
 <section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-                </a>
-            </div>
-        </div>
+    <div class="container d-flex justify-content-between tec">
+        <i class="fab fa-java"></i>
+        <i class="fab fa-python"></i>
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-node"></i>
+        <i class="fab fa-css3-alt"></i>
+        <i class="fab fa-angular"></i>
+        <i class="fab fa-android"></i>
     </div>
 </section>
 
-<!-- Contact -->
+<!--
+		==================================================================
+			contact
+		==================================================================
+-->
 <div class="container-fluid brb-1">
 
     <div class="row imagen-footer">
@@ -571,8 +580,8 @@
                     <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur enim harum iusto labore maxime minima modi nam porro possimus, provident quam qui quod suscipit velit, veniam voluptas voluptatem voluptates?</span><span>Accusamus alias aspernatur corporis ex fugit molestiae, necessitatibus nostrum odit officiis omnis optio possimus, quod ratione. Ad, asperiores atque aut beatae, consequuntur deleniti dicta eius exercitationem id nulla sapiente unde.</span>
                     </p>
                 </div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
-                   href="#services">Contactanos</a>
+                <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"-->
+                   <!--href="#services">Contactanos</a>-->
             </div>
         </div>
     </div>
@@ -582,7 +591,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <p class="text-white text-2 "> <i class="fab fa-whatsapp "></i>  15-3643-3247</p>
             </div>
         </div>
         <div class="row">
